--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="pr-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,45 +7,39 @@
     <title>Portifolio</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
-
 <body>
-    <header class="cabecalho">
-        <nav class="cabecalho__menu">
+    <header class="cabecalho"> 
+        <nav class="cabecalho__menu"> 
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="myprojects.html">Meus Projetos</a>
         </nav>
     </header>
-    <main class="apresentacao">
+    <main class="apresentacao"> 
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong 
-            class="titulo-destaque">com um Front-end de qualidade!
-            </strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Joana Santos, desenvolvedora
-            Front-end com especialidade em React, HTML e
-            CSS. Ajudo pequenos negócios e designers a
-            colocarem em prática boas ideias. Vamos
-            conversar?</p>
+            <h1 class="apresentacao__conteudo__titulo"> Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
+            <p class="apresentacao__conteudo__texto">Olá! Sou Nathalia Pires, desenvolvedora Front-end com especialidade em React,HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
-                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
-                <a class="apresentacao__links__link" href="https://github.com/rafaballerini">
-                    <img src="./assets/github.png">
-                    Github
+                <h2 class="apresentacao__links__subtitulo"> Acesse minhas redes: </h2>
+                <a class="apresentacao__links__link" href="https://www.instagram.com/nati_pires_fig/"> 
+                    <img class="apresentacao__links__link__img" src="./assets/instagram.png">
+                    Instagram 
                 </a>
-                <a class="apresentacao__links__link" href="https://linkedin.com/in/rafaellaballerini">
-                    <img src="./assets/linkedin.png">
-                    linkedin
+                <a class="apresentacao__links__link"  href="https://github.com/Nathaliafigueredo"> 
+                    <img class="apresentacao__links__link__img" src="./assets/github (1).png">
+                    Github 
                 </a>
-                <a class="apresentacao__links__link" href="https://twitch.tv/guilimadev">
-                    <img src="./assets/twitch.png">
-                    Twitch
-                </a>
+                <a class="apresentacao__links__link" href="https://www.linkedin.com/in/nath%C3%A1lia-pires-872a99224/"> 
+                    <img class="apresentacao__links__link__img" src="./assets/linkedin.png">
+                    Linkedin
+                 </a>
             </div>
+
         </section>
-        <img src="./assets/imagem.png" alt="Foto da Joana Santos programando">
+        <img class="apresentacao__imagem" src="./assets/1.PNG" alt="Foto na nathalia no park">
     </main>
     <footer class="rodape">
-        <p>Desenvolvido por Alura.</p>
+        <p> Desenvolvido por Nathália P. Figueredo</p>    
     </footer>
 </body>
-
 </html>
