--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     Instagram 
                 </a>
                 <a class="apresentacao__links__link"  href="https://github.com/Nathaliafigueredo"> 
-                    <img class="apresentacao__links__link__img" src="./assets/github (1).png">
+                    <img class="apresentacao__links__link__img" src="./assets/github.png">
                     Github 
                 </a>
                 <a class="apresentacao__links__link" href="https://www.linkedin.com/in/nath%C3%A1lia-pires-872a99224/"> 
